# ai-meeting-scheduler

./: README.md  crewai-configuration.md  crewai.md
organize_meetings/: README.md  pyproject.toml
organize_meetings/output/: invitation.txt
organize_meetings/src/organize_meetings/: crew.py  email_handler.py  main.py
organize_meetings/src/organize_meetings/config/: agents.yaml  tasks.yaml
